# quarto_test

./: pyproject.toml
dashboard/: _quarto.yml  index.qmd  styles.css
data/16.6/catalogos/: claves_codigos_indicadores_es.csv  claves_series_datos_calculo_es.csv
data/16.6/conjunto_de_datos/: 16.6.1_dc_759_es.csv  16.6.1_dc_760_es.csv  16.6.1_dc_761_es.csv  16.6.1_dc_762_es.csv  16.6.1_dc_763_es.csv  16.6.1_dc_764_es.csv  16.6.1_sh_es.csv  16.6.1_sh_notas_es.txt
data/16.6/metadatos/: 16.6.1_met_es.txt
data/9.3.2_Prestamo/catalogos/: claves_codigos_indicadores_es.csv  claves_series_datos_calculo_es.csv
data/9.3.2_Prestamo/conjunto_de_datos/: 9.3.2_dc_1920_es.csv  9.3.2_dc_1920_notas_es.txt  9.3.2_dc_1921_es.csv  9.3.2_sh_es.csv  9.3.2_sh_notas_es.txt
data/9.3.2_Prestamo/metadatos/: 9.3.2_met_es.txt
data/9.5.1_Gasto_federal/catalogos/: claves_codigos_indicadores_es.csv
data/9.5.1_Gasto_federal/conjunto_de_datos/: 9.5.1_dc_501_es.csv  9.5.1_dc_501_notas_es.txt  9.5.1_dc_502_es.csv  9.5.1_dc_502_notas_es.txt  9.5.1_sh_es.csv  9.5.1_sh_notas_es.txt
data/9.5.1_Gasto_federal/metadatos/: 9.5.1_met_es.txt
data/9n.2.1_Subsidio/catalogos/: claves_series_datos_calculo_es.csv
data/9n.2.1_Subsidio/conjunto_de_datos/: 9n.2.1_dc_2112_es.csv  9n.2.1_dc_2113_es.csv  9n.2.1_sh_es.csv  9n.2.1_sh_notas_es.txt
data/9n.2.1_Subsidio/metadatos/: 9n.2.1_met_es.txt
docs/: index.html  search.json
notebooks/: 015_ODS9.ipynb
